Elementos HTML incluidos

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "nicol/phpupload",
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app"
         }
     }
 }
